--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body> 
     <h1>Hello World!<br>I'm Salty_Fish_King!</h1>
     <p>这里，是一切的起源。</p>
-    <p>试验场在<a href="SFishK.github.io/testify/main.html/">这里</a></p>
+    <p>试验场在<a href="testify/main.html/">这里</a></p>
   </body>
 
 </html>
