--- a/testify/main.html
+++ b/testify/main.html
@@ -10,5 +10,6 @@
 
     <body>
         <h1>这里是简陋的试验场，<br>我将在这里进行HTML相关学习的练习（应该）</h1>
+        <p><a herf = "practice1.html">排版练习</a></p>
     </body>
 </html>
