--- a/testify/practice1.html
+++ b/testify/practice1.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>标题一</h1>
-        <p style="color:red ;">红<hr style="color:yellow ;">黄<hr style = "color : blue;">蓝</p>
+        <p style="color:red ;">红<br style="color:yellow ;">黄<br style = "color : blue;">蓝</p>
     </body>
 </html>>
