--- a/testify/practice1.html
+++ b/testify/practice1.html
@@ -1,12 +1,12 @@
 <DOCTYPE! html>
 
 <html>
-    <head>
+    <head style="background-color: black;">
         <meta charset="utf-8">
         <title>排版练习</title>
     </head>
     <body>
-        <h1>标题一</h1>
+        <h1 style="color: white;">标题一</h1>
         <p style="color:red ;">红</p>
         <p style="color:yellow ;">黄</p>
         <p style = "color : blue;">蓝</p>
