--- a/testify/practice1.html
+++ b/testify/practice1.html
@@ -1,11 +1,11 @@
 <DOCTYPE! html>
 
 <html>
-    <head style="background-color: black;">
+    <head >
         <meta charset="utf-8">
         <title>排版练习</title>
     </head>
-    <body>
+    <body style="background-color: black;">
         <h1 style="color: white;">标题一</h1>
         <p style="color:red ;">红</p>
         <p style="color:yellow ;">黄</p>
