--- a/testify/practice1.html
+++ b/testify/practice1.html
@@ -6,9 +6,19 @@
         <title>排版练习</title>
     </head>
     <body style="background-color: black;">
+
         <h1 style="color: white;">标题一</h1>
         <p style="color:red ;">红</p>
         <p style="color:yellow ;">黄</p>
         <p style = "color : blue;">蓝</p>
+
+        <h2 style="text-align:center;color: aquamarine;">标题2</h2>
+        <p style="text-align:center;color: cornflowerblue">春眠不觉晓，<hr>处处闻啼鸟。</p>
+
+        <h3 style="color: white ;">标题3</h3>
+        <p style="font-size: 50px;color: whitesmoke;">50px</p>
+        <p style="font-size: 40px;color: white;">40px</p>
+        <p style="font-size: 30px;color: white">30px</p>
+        <p style="font-size: 10px;color: white;">10px</p>
     </body>
 </html>
