--- a/testify/practice1.html
+++ b/testify/practice1.html
@@ -13,7 +13,7 @@
         <p style = "color : blue;">蓝</p>
 
         <h2 style="text-align:center;color: aquamarine;">标题2</h2>
-        <p style="text-align:center;color: cornflowerblue">春眠不觉晓，<hr>处处闻啼鸟。</p>
+        <p style="text-align:center;color: cornflowerblue">春眠不觉晓，<br>处处闻啼鸟。</p>
 
         <h3 style="color: white ;">标题3</h3>
         <p style="font-size: 50px;color: whitesmoke;">50px</p>
