--- a/testify/css_practice.html
+++ b/testify/css_practice.html
@@ -62,6 +62,8 @@
         </p>
         <p>
             就这样吧。
+            <br>还有，这是内联样式表的使用。
+            <br>那么，就到此为止吧。
         </p>
         <!--woc,这能写注释！那就--爷是高中生（2003前半年，高二），怎么着？你干我啊！-->
     </body>
